src/snapshots/syn_test__tests__pipeline_simple.snap
---
source: src/tests.rs
expression: hf
---
Map {
    f: | (value , _) | { value },
    input: Map {
        f: | (o) | { let value = o + 5 ; (value , ()) },
        input: Map {
            f: | (o , ()) | { (o) },
            input: Map {
                f: | (z) | { let value = z + 4 ; (value , ()) },
                input: Map {
                    f: | (z , ()) | { (z) },
                    input: Map {
                        f: | (x , y) | { let value = x + y + 3 ; (value , ()) },
                        input: Map {
                            f: | (y , (x)) | { (x , y) },
                            input: Map {
                                f: | (hf_in , x) | { let value = hf_in + 2 ; (value , (x)) },
                                input: Map {
                                    f: | (x , (hf_in)) | { (hf_in , x) },
                                    input: Map {
                                        f: | (hf_in) | { let value = 1 ; (value , (hf_in)) },
                                        input: Tee {
                                            inner: RefCell {
                                                value: Placeholder,
                                            },
                                        },
                                    },
                                },
                            },
                        },
                    },
                },
            },
        },
    },
}
