src/snapshots/syn_test__tests__return-2.snap
---
source: src/tests.rs
expression: visualize(hf)
---
node0=Placeholder;

node0.tee() 
.MAP(| (hf_in) | { let value = hf_in + 1 ; (value , ()) }) 
.MAP(| (x , ()) | { (x) }) 
.MAP(| (x) | { let value = x ; (value , ()) }) 
.MAP(| (value , _) | { value })
