src/snapshots/syn_test__tests__return.snap
---
source: src/tests.rs
expression: hf
---
Map {
    f: | (value , _) | { value },
    input: Map {
        f: | (x) | { let value = x ; (value , ()) },
        input: Map {
            f: | (x , ()) | { (x) },
            input: Map {
                f: | (hf_in) | { let value = hf_in + 1 ; (value , ()) },
                input: Tee {
                    inner: RefCell {
                        value: Placeholder,
                    },
                },
            },
        },
    },
}
