src/snapshots/syn_test__tests__return_simple-2.snap
---
source: src/tests.rs
expression: visualize(hf)
---
node0=Placeholder;

node0.tee() 
	.map(| (hf_in) | { (hf_in) }) 
	.map(| (mut hf_in) | { let value = hf_in ; (value , ()) }) 
	.map(| (value , _) | { value })
