src/snapshots/syn_test__tests__return_simple.snap
---
source: src/tests.rs
expression: hf
---
Map {
    f: | (value , _) | { value },
    input: Map {
        f: | (hf_in) | { let value = hf_in ; (value , ()) },
        input: Tee {
            inner: RefCell {
                value: Placeholder,
            },
        },
    },
}
