src/snapshots/syn_test__tests__while_simple.snap
---
source: src/tests.rs
expression: hf
---
(
    [
        CycleSink {
            ident: Ident {
                sym: __HYDRAULIC_LIFT__0,
            },
            location_kind: Process(
                0,
            ),
            input: Map {
                f: | (_ , scope) | { scope },
                input: Map {
                    f: | (mut x) | { let value = () ; (value , (x)) },
                    input: Map {
                        f: | (_ , (x)) | { (x) },
                        input: Map {
                            f: | (mut x) | { let value = x = x + 1 ; (value , (x)) },
                            input: FilterMap {
                                f: | (cond , scope) | { if cond != true { return None } Some (scope) },
                                input: Tee {
                                    inner: RefCell {
                                        value: Map {
                                            f: | (mut x) | { let value = x > 0 ; (value , (x)) },
                                            input: Union(
                                                Map {
                                                    f: | (x , ()) | { (x) },
                                                    input: Map {
                                                        f: | () | { let value = 3 ; (value , ()) },
                                                        input: Map {
                                                            f: | _ | { () },
                                                            input: Tee {
                                                                inner: RefCell {
                                                                    value: Placeholder,
                                                                },
                                                            },
                                                        },
                                                    },
                                                },
                                                CycleSource {
                                                    ident: Ident {
                                                        sym: __HYDRAULIC_LIFT__0,
                                                    },
                                                    location_kind: Process(
                                                        0,
                                                    ),
                                                },
                                            ),
                                        },
                                    },
                                },
                            },
                        },
                    },
                },
            },
        },
    ],
    Map {
        f: | (value , _) | { value },
        input: Map {
            f: | () | { let value = () ; (value , ()) },
            input: Map {
                f: | (_ , ()) | { () },
                input: Map {
                    f: | (mut x) | { let value = x = 10 ; (value , ()) },
                    input: FilterMap {
                        f: | (cond , scope) | { if cond != false { return None } Some (scope) },
                        input: Tee {
                            inner: RefCell {
                                value: Map {
                                    f: | (mut x) | { let value = x > 0 ; (value , (x)) },
                                    input: Union(
                                        Map {
                                            f: | (x , ()) | { (x) },
                                            input: Map {
                                                f: | () | { let value = 3 ; (value , ()) },
                                                input: Map {
                                                    f: | _ | { () },
                                                    input: Tee {
                                                        inner: RefCell {
                                                            value: Placeholder,
                                                        },
                                                    },
                                                },
                                            },
                                        },
                                        CycleSource {
                                            ident: Ident {
                                                sym: __HYDRAULIC_LIFT__0,
                                            },
                                            location_kind: Process(
                                                0,
                                            ),
                                        },
                                    ),
                                },
                            },
                        },
                    },
                },
            },
        },
    },
)
